# leasr

./: .env  .gitignore  Cargo.toml  rest.http
migrations/2020-01-02-084742_users/: up.sql
migrations/2020-01-02-085432_posts/: down.sql  up.sql
src/: main.rs  models.rs  schema.rs
src/services/: mod.rs  user.rs
