[package]
name = "leas"
version = "0.1.0"
authors = ["Yiran <percivalstr@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0"
actix-rt = "1.0"

serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"

chrono = { version = "0.4", features = ["serde"] }
r2d2 = "0.8"
diesel = { version = "1.4", features = ["postgres", "r2d2", "chrono"] }
dotenv = "0.15"
env_logger = "0.7"
